# advent-of-code

./: package-lock.json  pyproject.toml  run.ts
util/: dicts.ts  grid.ts  sets.ts  util.ts
years/2021/01/: index.ts
years/2021/02/: index.ts
years/2021/03/: index.ts
years/2021/04/: index.ts
years/2021/05/: index.ts
years/2021/06/: index.ts
years/2021/07/: index.ts
years/2021/08/: index.ts
years/2021/09/: index.ts
years/2021/10/: index.ts
years/2021/11/: index.ts
years/2021/12/: index.ts
years/2021/13/: index.ts
years/2021/14/: index.ts  sample1.txt
years/2021/15/: index.ts
years/2021/16/: index.ts
years/2021/17/: index.ts
years/2021/18/: index.ts
years/2021/19/: index.ts
years/2021/20/: index.ts
years/2021/21/: index.ts
years/2021/22/: index.ts
years/2021/23/: index.ts
years/2021/24/: index.ts
years/2021/25/: index.ts
years/2022/: day1.py  day12.py  day13.py  day14.py  day15.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day7b.py  day8.py  day9.py  day9pt2.py
years/2022/day10/: day10.py  day10b.py
years/2022/day11/: day11.py
years/day11/: day11b.py
