[tool.poetry]
name = "advent-of-code"
version = "1.0.0"
description = ""
authors = ["David Fourie <david.fourie@stonethree.com>"]

[tool.poetry.dependencies]
python = "^3.9"
advent-of-code-data = "^1.2.2"
black = "^22.10.0"
parse = "^1.19.0"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]
ipykernel = "^6.18.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
